--- a/app/views/dishDetail.html
+++ b/app/views/dishDetail.html
@@ -31,7 +31,62 @@
               <p>{{comment.comment}}</p>
               <footer>{{comment.author}} , {{comment.date | date:mediumDate}}</footer>
             </blockquote>
+            
         </div>
+        <div class="col-xs-9 col-xs-offset-1" ng-controller="DishCommentController">
+            <blockquote ng-show="commentsForm.$valid">
+              <p>{{newComment.rating}} Stars</p>
+              <p>{{newComment.comment}}</p>
+              <footer>{{newComment.author}} , {{newComment.date | date:mediumDate}}</footer>
+            </blockquote>
+            <form name="commentsForm" class="form-horizontal" ng-submit="submitComment()" novalidate>
+                <div class="form-group" ng-class="{ 'has-error' : commentsForm.author.$error.required && !commentsForm.author.$pristine }">
+                    <label for="firstname" class="col-sm-2 control-label">Your Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="author" name="author" placeholder="Enter Your Name"
+                        ng-model="newComment.author" required>
+                        <span ng-show="commentsForm.author.$error.required && !commentsForm.author.$pristine" class="help-block">
+                          Your Name is required.
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group" ng-class="{ 'has-error' : commentsForm.comment.$error.required && !commentsForm.comment.$pristine }">
+                    <label for="comment" class="col-sm-2 control-label">Your Comments</label>
+                    <div class="col-sm-10">
+                      <textarea id="comment" name="comment" cols="50" class="form-control" placeholder="Your Comments" ng-model="newComment.comment" required></textarea>
+                        <span ng-show="commentsForm.comment.$error.required && !commentsForm.comment.$pristine" class="help-block">
+                          Your comment is required.
+                        </span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="rating" class="col-sm-2 control-label">Rating</label>
+                    <div class="col-sm-10">
+                        <label class="radio-inline">
+                          <input type="radio" name="rating" ng-model="newComment.rating" value="1"> 1
+                        </label>
+                        <label class="radio-inline">
+                          <input type="radio" name="rating" ng-model="newComment.rating" value="2"> 2
+                        </label>
+                        <label class="radio-inline">
+                          <input type="radio" name="rating" ng-model="newComment.rating" value="3"> 3
+                        </label>
+                         <label class="radio-inline">
+                          <input type="radio" name="rating" ng-model="newComment.rating" value="4"> 4
+                        </label>
+                         <label class="radio-inline">
+                          <input type="radio" name="rating" ng-model="newComment.rating" value="5"> 5
+                        </label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-primary" ng-disabled="commentsForm.$invalid">Save Comment</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
     </div>
 
 </div>
